<resources>
    <string name="app_name">Gollachut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="EmailHint">Email Id</string>
    <string name="passwordHint">Password (at least 8 character)</string>
    <string name="ForGotPass">Forgot Password?</string>
    <string name="ButtonSignIn">Sign In</string>
    <string name="or">Or</string>
    <string name="DonHaveAccount">Don\'t have an account? Sign Up</string>
    <string name="todo">TODO</string>
    <string name="FullName">Full Name</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="alreadyHaveAccount">Already have an account?Sign In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="send_button_label">Send</string>
    <string name="submit">Chat</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
