<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment"
    android:background="@color/colorPrimaryDark">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/sign_in_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:src="@mipmap/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/LogoImageView"
            android:layout_width="252dp"
            android:layout_height="149dp"
            android:src="@mipmap/gollachot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.171"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/sign_In_EmailIdEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#95ffffff"
            android:ems="10"
            android:hint="@string/EmailHint"
            android:textColor="@color/colorAccent"
            android:inputType="textEmailAddress"
            android:textColorHint="#95ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LogoImageView"
            android:autofillHints="" />

        <EditText
            android:id="@+id/sign_In_PasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#95ffffff"
            android:textColor="@color/colorAccent"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColorHint="#95ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_In_EmailIdEditText"
            android:autofillHints="" tools:targetApi="o" />

        <TextView
            android:id="@+id/ForGotPassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/ForGotPass"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_In_PasswordEditText" />

        <Button
            android:id="@+id/SignInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/btnClr"
            android:text="@string/ButtonSignIn"
            android:textAllCaps="false"
            android:enabled="false"
            android:textColor="#50ffffff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ForGotPassTextView" />

        <TextView
            android:id="@+id/OrTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/dontHaveanAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignInButton" />

        <TextView
            android:id="@+id/dontHaveanAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/DonHaveAccount"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/OrTextView"
            app:layout_constraintEnd_toStartOf="@+id/OrTextView"
            app:layout_constraintTop_toTopOf="@+id/OrTextView" />

        <View
            android:id="@+id/divider2"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/OrTextView"
            app:layout_constraintStart_toEndOf="@+id/OrTextView"
            app:layout_constraintTop_toTopOf="@+id/OrTextView" />

        <ProgressBar
            android:id="@+id/signInProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/SignInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ForGotPassTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>